--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/next": "^9.0.0",
     "js-cookie": "^2.2.1",
     "next": "10.0.7",
     "react": "17.0.1",
